--- a/web/package.json
+++ b/web/package.json
@@ -12,10 +12,10 @@
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
     "apollo-link-token-refresh": "^0.3.2",
+    "babel-loader": "8.1.0",
     "framer-motion": "^3.1.4",
     "graphql": "^15.4.0",
     "react": "^17.0.1",
-    "react-apollo": "^3.1.5",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
@@ -60,6 +60,10 @@
     "@storybook/react": "^6.1.11",
     "@types/react-router-dom": "^5.1.7",
     "@types/styled-components": "^5.1.7",
-    "@types/styled-system": "^5.1.10"
+    "@types/styled-system": "^5.1.10",
+    "webpack": "4.44.2"
+  },
+  "resolutions": {
+    "webpack": "4.44.2"
   }
 }
